--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "license": "MIT",
   "scripts": {},
   "private": true,
-  "dependencies": {},
   "devDependencies": {
+    "@nrwl/js": "^15.8.5",
     "@nrwl/nx-cloud": "latest",
+    "@nrwl/react": "^15.8.5",
+    "@nrwl/vite": "^15.8.5",
     "@nrwl/workspace": "15.8.5",
     "nx": "15.8.5",
     "prettier": "^2.6.2"
