--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "scripts": {},
   "private": true,
   "devDependencies": {
+    "@babel/core": "7.12.13",
+    "@babel/preset-typescript": "7.12.13",
+    "@nrwl/cypress": "15.8.5",
     "@nrwl/eslint-plugin-nx": "15.8.5",
     "@nrwl/js": "^15.8.5",
     "@nrwl/linter": "15.8.5",
@@ -13,6 +16,18 @@
     "@nrwl/storybook": "^15.8.5",
     "@nrwl/vite": "^15.8.5",
     "@nrwl/workspace": "15.8.5",
+    "@storybook/addon-actions": "^6.5.16",
+    "@storybook/addon-backgrounds": "^6.5.16",
+    "@storybook/addon-docs": "^6.5.16",
+    "@storybook/addon-essentials": "^6.5.15",
+    "@storybook/addon-measure": "^6.5.16",
+    "@storybook/addon-outline": "^6.5.16",
+    "@storybook/builder-vite": "^0.2.6",
+    "@storybook/client-api": "^6.5.16",
+    "@storybook/client-logger": "^6.5.16",
+    "@storybook/core-server": "^6.5.15",
+    "@storybook/react": "^6.5.15",
+    "@svgr/webpack": "^6.1.2",
     "@swc/core": "^1.2.173",
     "@testing-library/react": "14.0.0",
     "@types/node": "18.14.2",
@@ -24,12 +39,16 @@
     "@vitest/coverage-c8": "~0.25.8",
     "@vitest/ui": "^0.25.8",
     "autoprefixer": "^10.4.13",
+    "babel-loader": "8.1.0",
+    "cypress": "^12.2.0",
     "eslint": "~8.15.0",
     "eslint-config-prettier": "8.1.0",
+    "eslint-plugin-cypress": "^2.10.3",
     "eslint-plugin-import": "2.27.5",
     "eslint-plugin-jsx-a11y": "6.7.1",
     "eslint-plugin-react": "7.32.2",
     "eslint-plugin-react-hooks": "4.6.0",
+    "html-webpack-plugin": "^5.5.0",
     "jsdom": "~20.0.3",
     "nx": "15.8.5",
     "postcss": "^8.4.21",
@@ -38,6 +57,7 @@
     "swc-loader": "0.1.15",
     "tailwindcss": "^3.2.7",
     "typescript": "~4.9.5",
+    "url-loader": "^4.1.1",
     "vite": "^4.0.1",
     "vite-plugin-dts": "~1.7.1",
     "vite-plugin-eslint": "^1.8.1",
